see #19724 - add Java 16 workaround suggested by Error Prone developers
git-svn-id: https://josm.openstreetmap.de/svn/trunk@17520 0c6e7542-c601-0410-84e7-c038aed88b3b